# FarmersGuide

./: .gitignore  CLAUDE.md  README.md  bootstrap_farmers_guide.sh  config.py  pyproject.toml  requirements.txt
docs/: ground_truth_plan.md
gee/: farmers_guide_s2_export.js  fg_export.py
notebooks/: 02_train.ipynb
src/farmers_guide/: evaluate.py  train.py
src/farmers_guide/data/: dataset.py  ground_truth.py  hdf5_builder.py
src/farmers_guide/models/: fusion.py  ground_cnn.py  satellite_cnn.py
