[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "farmers-guide"
version = "0.1.0"
description = "Maize yield prediction for smallholder farms, Lusaka Province"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "pandas",
    "rasterio",
    "h5py",
    "scikit-learn",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
